--- a/.gitignore
+++ b/.gitignore
@@ -105,5 +105,6 @@ xcuserdata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 **/xcuserdata/*
+*.xcodeproj/project.xcworkspace/xcuserdata/*
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift,swiftpackagemanager
