--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,10 @@ xcuserdata
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
-**/xcuserdata/*
+**/xcuserdata/**
 *.xcodeproj/project.xcworkspace/xcuserdata/*
 *.xcodeproj/xcshareddata/xcschemes/*
+**/xcdebugger/
+
+
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift,swiftpackagemanager
